# gnuworld

./: .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  AUTHORS  ChangeLog  Credits  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README-NEW-Features.txt  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  ltconfig  ltmain.sh  mkinstalldirs
db/: .cvsignore  Makefile.am  Makefile.in  dbHandle.h  gnuworldDB.cc  gnuworldDB.h  pgsqlDB.cc  pgsqlDB.h
lib/: .arch-inventory  .cvsignore  Buffer.cc  Buffer.h  ClientSocket.cc  ClientSocket.h  Connection.cc  Connection.h  ConnectionHandler.cc  ConnectionHandler.h  ConnectionManager.cc  ConnectionManager.h  EConfig.cc  EConfig.h  EIOThread.cc  EIOThread.h  ELog.cc  ELog.h  EReadThread.cc  EReadThread.h  EThread.cc  EThread.h  EWriteThread.cc  EWriteThread.h  FileSocket.cc  FileSocket.h  Makefile.am  Makefile.in  Socket.cc  Socket.h  StringTokenizer.cc  StringTokenizer.h  global.h  ircd_chattr.h  match.cc  match.h  md5.cc  md5.h  md5hash.cc  md5hash.h  (+7 more)
libgnuworld/: Buffer.cc  Buffer.h  Connection.cc  Connection.h  ConnectionHandler.cc  ConnectionHandler.h  ConnectionManager.cc  ConnectionManager.h  EConfig.cc  EConfig.h  ELog.cc  ELog.h  MTrie.cc  MTrie.h  Makefile.am  Makefile.in  MigrationChecker.cc  MigrationChecker.h  Signal.cc  Signal.h  StringTokenizer.cc  StringTokenizer.h  gThread.cc  gThread.h  ircd_chattr.h  logger.cc  logger.h  match.cc  match.h  match_table.h  md5hash.cc  md5hash.h  misc.cc  misc.h  notifier.h  prometheus.cc  prometheus.h  pushover.cc  pushover.h  threadworker.cc  (+2 more)
libircu/: Makefile.am  Makefile.in  msg_AC.cc  msg_AD.cc  msg_B.cc  msg_C.cc  msg_CF.cc  msg_CM.cc  msg_D.cc  msg_DS.cc  msg_EA.cc  msg_EB.cc  msg_Error.cc  msg_G.cc  msg_GL.cc  msg_I.cc  msg_J.cc  msg_JU.cc  msg_K.cc  msg_L.cc  msg_M.cc  msg_M351.cc  msg_M391.cc  msg_N.cc  msg_NOOP.cc  msg_O.cc  msg_P.cc  msg_PA.cc  msg_PART.cc  msg_PASS.cc  msg_Q.cc  msg_R.cc  msg_RI.cc  msg_RO.cc  msg_S.cc  msg_SQ.cc  msg_Server.cc  msg_T.cc  msg_V.cc  msg_W.cc  (+4 more)
libnotifier/: Makefile.am  logger.cc  logger.h  notifier.h  prometheus.cc  prometheus.h  pushover.cc  pushover.h
mod.ccontrol/: .cvsignore  ACCESSCommand.cc  ADDCOMMANDCommand.cc  ADDNEWOPERCommand.cc  ADDNEWSERVERCommand.cc  ADDOPERCHANCommand.cc  ADDSERVERCommand.cc  ADDUSERCommand.cc  ANNOUNCECommand.cc  AuthInfo.cc  AuthInfo.h  CControlCommands.cc  CControlCommands.h  CHANGLINECommand.cc  CHANINFOCommand.cc  CHECKNETCommand.cc  CHECKNETWORKCommand.cc  CLEARCHANCommand.cc  COMMANDSCommand.cc  CONFIGCommand.cc  CommandsDec.h  Constants.h  Credits  DEAUTHCommand.cc  DEOPCommand.cc  EXCEPTIONCommand.cc  FORCECHANGLINECommand.cc  FORCEGLINECommand.cc  GCHANCommand.cc  GLINECommand.cc  HELPCommand.cc  INVITECommand.cc  IP6Command.cc  JUPECommand.cc  KICKCommand.cc  LASTCOMCommand.cc  LEARNNETCommand.cc  LEARNNETWORKCommand.cc  LIMITSCommand.cc  LISTCommand.cc  (+74 more)
mod.chanfix/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  cfChannel.cc  cfChannel.h  cfChannelUser.cc  cfChannelUser.h  chanfix-commands.cc  chanfix-commands.h  chanfix-core.cc  chanfix-misc.cc  chanfix-xclient.cc  chanfix.cc  chanfix.h  cmdCHECK.cc  cmdHELP.cc  logging.h
mod.clientExample/: Makefile.am  Makefile.in  clientExample.cc  clientExample.h
mod.cloner/: Makefile.am  Makefile.in  TODO  cloner.cc  cloner.h
mod.cservice/: ACCESSCommand.cc  ADDCOMMENTCommand.cc  ADDUSERCommand.cc  AI.cc  BANCommand.cc  BANLISTCommand.cc  CERTCommand.cc  CHANINFOCommand.cc  CIDRBanMatcher.cc  CIDRBanMatcher.h  CLEARMODECommand.cc  Credits  DEOPCommand.cc  DEVOICECommand.cc  FORCECommand.cc  HELLOCommand.cc  HELPCommand.cc  HostBanMatcher.cc  HostBanMatcher.h  INVITECommand.cc  ISREGCommand.cc  JOINCommand.cc  KICKCommand.cc  LBANLISTCommand.cc  LOGINCommand.cc  MODECommand.cc  MODINFOCommand.cc  MOTDCommand.cc  Makefile.am  Makefile.in  NEWPASSCommand.cc  NOTECommand.cc  OPCommand.cc  OPERJOINCommand.cc  OPERPARTCommand.cc  PARTCommand.cc  PURGECommand.cc  QUOTECommand.cc  RANDOMCommand.cc  REGISTERCommand.cc  (+58 more)
mod.debug/: CHANINFOCommand.cc  Makefile.am  REHASHCommand.cc  SERVERINFOCommand.cc  SERVERSCommand.cc  SHUTDOWNCommand.cc  USERINFOCommand.cc  debug-commands.cc  debug-commands.h  debug-xclient.cc  debug.cc  debug.h
mod.dronescan/: .cvsignore  .gitignore  ABNORMALSTest.cc  ACCESSCommand.cc  ADDEXCEPTIONALCHANNELCommand.cc  ADDUSERCommand.cc  ANALYSECommand.cc  CHECKCommand.cc  COMMONREALTest.cc  ChangeLog  Convert.cc  Convert.h  FAKECommand.cc  HASALLOPTest.cc  HASOPTest.cc  HELLOCommand.cc  HELPCommand.cc  LASTCOMCommand.cc  LISTCommand.cc  MAXCHANSTest.cc  MODUSERCommand.cc  Makefile.am  Makefile.in  QUOTECommand.cc  RANGETest.cc  README  REHASHCommand.cc  RELOADCommand.cc  REMEXCEPTIONALCHANNELCommand.cc  REMUSERCommand.cc  SPAM.md  SPAMCommand.cc  STATUSCommand.cc  Timer.h  Updates  activeChannel.h  clientData.h  constants.h  dronescan.cc  dronescan.h  (+25 more)
mod.gnutest/: Makefile.am  Makefile.in  gnutest.cc  gnutest.h
mod.nickserv/: .cvsignore  ChangeLog  INFOCommand.cc  INVITECommand.cc  Logger.cc  Logger.h  MODUSERCommand.cc  Makefile.am  Makefile.in  README  RECOVERCommand.cc  REGISTERCommand.cc  RELEASECommand.cc  SETCommand.cc  SHUTDOWNCommand.cc  STATSCommand.cc  Stats.cc  Stats.h  Updates  WHOAMICommand.cc  levels.h  logTarget.h  netData.cc  netData.h  nickserv.cc  nickserv.h  nickservCommands.h  responses.h  sqlManager.cc  sqlManager.h  sqlUser.cc  sqlUser.h
mod.openchanfix/: .cvsignore  ADDFLAGCommand.cc  ADDHOSTCommand.cc  ADDNOTECommand.cc  ADDUSERCommand.cc  ALERTCommand.cc  BLOCKCommand.cc  CANFIXCommand.cc  CHANFIXCommand.cc  CHECKCommand.cc  DEBUG-REPORT-sql-persistence.md  DEBUGCommand.cc  DELFLAGCommand.cc  DELHOSTCommand.cc  DELNOTECommand.cc  DELUSERCommand.cc  DUMPSQLCommand.cc  HELPCommand.cc  HISTORYCommand.cc  INFOCommand.cc  INVITECommand.cc  LASTCOMCommand.cc  LISTBLOCKEDCommand.cc  LISTHOSTSCommand.cc  LISTTEMPBLOCKEDCommand.cc  Makefile.am  Makefile.in  OPLISTCommand.cc  OPNICKSCommand.cc  QUOTECommand.cc  REHASHCommand.cc  RELOADCommand.cc  REQUESTOPCommand.cc  (+42 more)
(+406 files in other folders)
